--- a/src/README.adoc
+++ b/src/README.adoc
@@ -36,7 +36,7 @@ When invoked from the command line owl2shacl takes up to 4 arguments, the first 
 
 -o, --ontology which should be the path to the serialised ontology
 
--s, --shacl which should be the path to where the shacl shape is located or to be saved.
+-s, --shacl which should be the path to where the shacl shape is located or should to be saved to.
 
 -v, --validate which should be the path to the data to be validated.
 
