--- a/src/README.adoc
+++ b/src/README.adoc
@@ -40,10 +40,10 @@ When invoked from the command line owl2shacl takes up to 4 arguments, the first 
 
 -v, --validate which should be the path to the data to be validated.
 
-To create a shacl shape graph just the -s and -o options should be used.
+To create a shacl shape graph, just the -s and -o options should be used.
 To validate a data graph against the ontology and shapes all three should be supplied.
 
-There is an additional option -d, --dry run. This will create a new shacl shape graph but rather than overwrite the previous version it will display a summary of the changes that would occur.
+There is an additional option -d, --dry run. This will create a new shacl shape graph but rather than overwrite the previous version, it will display a summary of the changes that would occur.
 
 
 
